--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -33,6 +33,6 @@ html,body{
   bottom: 30px;
   z-index: 101;
   width: 100%;
-  text-align: center;
+  text-align: center
 }
 /*controller -- end*/
