--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,14 +9,14 @@ html,body{
   height: 100%;
 }
 
-
 /*stage -- start*/
 .stage{
   position: relative;
-  width: 100%;
-  height: 680px;
+  width:100%;
+  height: 1000px;
 }
 /*stage -- end*/
+
 /*img -- start*/
 .img-sec{
   position: relative;
@@ -25,7 +25,29 @@ html,body{
   overflow: hidden;
   background-color: #ddd;
 }
+.img-sec > .img-figure{
+  position: absolute;
+  width: 320px;
+  height: 360px;
+  margin: 0;
+  padding: 40px 40px 0 40px;
+  box-sizing:border-box;
+  background-color: #fff;
+}
+.img-sec > .img-figure > img{
+  width: 240px;
+  height: 240px;
+}
+figcaption{
+  text-align: center;
+}
+.img-sec > .img-title{
+  margin: 20px 0 0 0;
+  column-rule: #a7a0a2;
+}
+
 /*img -- end*/
+
 /*controller -- start*/
 .controller-nav{
   position: absolute;
