--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,3 +1,11 @@
+@font-face {
+  font-family:"icons-turn-arrow";
+  src:url("../font/ArrowIcon/iconfont.eot") format("embedded-opentype"),
+  url("../font/ArrowIcon/iconfont.woff") format("woff"),
+  url("../font/ArrowIcon/iconfont.ttf") format("truetype"),
+  url("../font/ArrowIcon/iconfont.svg") format("svg");
+}
+
 html, body{
   width:100%;
   height:100%;
@@ -35,14 +43,17 @@ html, body{
       box-sizing:border-box;
       background:#fff;
       transform-style: preserve-3d;
+      //设置旋转中心点
       transform-origin: 0 50% 0;
       cursor: pointer;
+      //设置排布动画，以及反转动画
       transition: left .6s ease-in-out, top .6s ease-in-out, transform .6s ease-in-out;
       img{
         width:240px;
         height:auto;
       }
       &.is-inverse {
+
         transform: translate(320px) rotateY(180deg);
       }
     }
@@ -63,6 +74,7 @@ html, body{
         overflow:auto;
         color: #666;
         background: #fff;
+        //解决一下苹果的浏览器
         transform: rotateY(180deg) translateZ(1px);
         box-sizing: border-box;
         backface-visibility:hidden;
@@ -84,6 +96,7 @@ html, body{
   @at-root{
     .controller-unit{
       display: inline-block;
+      //中部对齐
       vertical-align: middle;
       width:30px;
       height:30px;
@@ -99,12 +112,12 @@ html, body{
         transform: scale(1);
         &::after{
           color:#fff;
-          font-family: 'icons-arrow';
+          font-family: 'icons-turn-arrow';
           line-height: 30px;
           content: '\e683';
           font-size:80%;
-          -webkit-font-smoothing: antialiasd;
-          -moz-osx-font-smoothing: grayscale;
+          -webkit-font-smoothing: antialiased;
+          -moz-osx-font-smoothing:grayscale;
         }
         // 翻转态
         &.is-inverse{
